contrast change and bug fixes

--- a/popups/cloud-games/popup.css
+++ b/popups/cloud-games/popup.css
@@ -103,6 +103,9 @@ body {
 .add-button {
   text-align: center;
   padding-top: 0.5rem;
+  justify-content: center;
+  display: flex;
+  margin-left: 23px;
 }
 
 .opened {
